Fixed formatting, added formatting settings, fixed header overlay issue on mobile

--- a/index.css
+++ b/index.css
@@ -1,108 +1,113 @@
-#topbar{
+#topbar {
     position: sticky;
-	background: rgb(184, 28, 28)!important;
-	font-size: 15px;
-	height: 40px;
-	padding: 0;
-	color: rgba(24, 22, 22, 0.6);
-	/*transform: translate(0, -200px);*/
+    background: rgb(184, 28, 28) !important;
+    font-size: 15px;
+    height: 40px;
+    padding: 0;
+    color: rgba(24, 22, 22, 0.6);
+    /*transform: translate(0, -200px);*/
 }
 
 #topbar .contact-info a {
-	line-height: 0;
-	color: rgba(255, 255, 255, 0.6);
-	transition: 0.3s;
+    line-height: 0;
+    color: rgba(255, 255, 255, 0.6);
+    transition: 0.3s;
 }
 
 #topbar .contact-info a:hover {
-	color: #fff;
+    color: #fff;
 }
 
 #topbar .contact-info i {
-	color: #cc1616;
-	line-height: 0;
-	margin-right: 5px;
+    color: #cc1616;
+    line-height: 0;
+    margin-right: 5px;
 }
 
 #topbar .contact-info .phone-icon {
-	margin-left: 15px;
+    margin-left: 15px;
 }
 
 #topbar .social-links a {
-	color: rgba(255, 255, 255, 0.6);
-	padding: 4px 12px;
-	display: inline-block;
-	line-height: 1px;
-	transition: 0.3s;
+    color: rgba(255, 255, 255, 0.6);
+    padding: 4px 12px;
+    display: inline-block;
+    line-height: 1px;
+    transition: 0.3s;
 }
 
 #topbar .social-links a:hover {
-	color: #fff;
-
+    color: #fff;
 }
 
-.homepage-slider::before{
+.homepage-slider::before {
     display: block;
-    content: '';
+    content: "";
     height: 40px;
 }
 
-body{
-    position:relative;
+body {
+    position: relative;
+    margin: 0;
 }
 
-.product-boxx{
-    height:100%;
+.product-boxx {
+    height: 100%;
 }
 
-
-.logo:hover{
-    transform:scale(2,2);
+@media screen and (min-width: 768px) {
+    .logo:hover {
+        /* only scale up on large devices(laptop and above) */
+        transform: scale(2);
+    }
 }
 
-#section{
+#section {
     display: inline-block;
-  margin: 0 0.5rem;
+    margin: 0 0.5rem;
 
-  animation: tada; /* referring directly to the animation's @keyframe declaration */
-  animation-duration: 2s; /* don't forget to set a duration! */
+    animation: tada; /* referring directly to the animation's @keyframe declaration */
+    animation-duration: 2s; /* don't forget to set a duration! */
 }
 
-
-.card{
-    height:auto;
-    opacity:.8;
+#carouselExampleFade img {
+    border-radius: 4px;
 }
-.card:hover{
-    opacity:2;
-    transform:scale(1.1,1.1);
-    transition:1.0s ease all;
-    background:  #00008b;
-    box-shadow: 0 8px 6px -6px black;
+.card {
+    height: auto;
+    opacity: 0.8;
+}
+.card:hover {
+    opacity: 2;
+    transform: scale(1.1, 1.1);
+    transition: 1s ease all;
+    background: #00008b;
+    /* box-shadow: 0 8px 6px -6px black; */
+    box-shadow: 0 4px 4px 0 rgba(0, 0, 0, 0.15);
     cursor: pointer;
 }
 
-.card:hover .card-title{
-    color:#cc1616;
+.card:hover .card-title {
+    color: #cc1616;
 }
-.nav-item{
-    font-size: 20px;
+.nav-item {
+    font-size: 1.125rem; /* 18px */
+    font-weight: 500;
 }
 
 .nav-item:hover {
-    transform:scale(1.2,1.2);
-    transition:0.9s;
+    transform: scale(1.1);
+    transition: 0.9s;
     text-decoration-line: underline;
     text-decoration-color: #cc1616;
 }
 
-
-.call{
-    display:none;
+.call {
+    display: none;
 }
 
-.call-btn:hover +.call{
-    display:block;
+.call-btn:hover + .call {
+    display: block;
 }
 
 /*
@@ -122,12 +127,32 @@ body{
 
 /*media queries*/
 
-@media screen and (max-width:576px){
-    .phone{
+@media screen and (max-width: 576px) {
+    .phone {
         display: none;
     }
 
-    .help{
+    .help {
         display: none;
     }
+}
+
+.center-vertically {
+    display: inline-flex;
+    align-items: center;
+}
+.font-size-sm {
+    font-size: 0.875rem; /* 14px */
+}
+.font-size-base {
+    font-size: 1rem; /* 16px */
+}
+.font-size-lg {
+    font-size: 1.125rem; /* 18px */
+}
+.font-size-xl {
+    font-size: 1.25rem; /* 20px */
+}
+.font-size-2xl {
+    font-size: 1.375rem; /* 22px */
 }
